--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,7 +47,8 @@ jobs:
               echo "Repository belum di-clone. Cloning...";
               mkdir -p ~/senpro/514148/modul02;
               cd ~/senpro/514148/modul02;
-              git clone git@github.com:runsdev/senpro-github-action.git;
+              # git clone git@github.com:runsdev/senpro-github-action.git;
+              git clone https://github.com/runsdev/senpro-github-action.git;
               cd ~/senpro/514148/modul02/senpro-github-action;
               echo "Install Package dan Build Project";
               npm install;
